crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_add_index_constraint@add_index_constraint_Postgres.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
CREATE INDEX "ix_users__idx_email" ON "users" ("email")
