crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_delete_column@delete_column_Postgres.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
ALTER TABLE "users" DROP COLUMN "email"
