crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_modify_column_comment@postgres_modify_comment.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
COMMENT ON COLUMN "users"."email" IS 'User email address'
