crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_modify_column_default@postgres_modify_default.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
ALTER TABLE "users" ALTER COLUMN "status" SET DEFAULT 'active'
