crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_modify_column_default@sqlite_modify_default.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
CREATE TABLE "users_temp" ( "status" text DEFAULT 'active' )
INSERT INTO "users_temp" ("status") SELECT "status" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
