crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_modify_column_nullable@mysql_modify_nullable.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
UPDATE `users` SET `email` = 'unknown' WHERE `email` IS NULL
ALTER TABLE `users` MODIFY COLUMN `email` text NOT NULL
