crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_modify_column_nullable@postgres_modify_nullable.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
UPDATE "users" SET "email" = 'unknown' WHERE "email" IS NULL
ALTER TABLE "users" ALTER COLUMN "email" SET NOT NULL
