crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_modify_column_nullable@sqlite_modify_nullable.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
UPDATE "users" SET "email" = 'unknown' WHERE "email" IS NULL
CREATE TABLE "users_temp" ( "email" text NOT NULL )
INSERT INTO "users_temp" ("email") SELECT "email" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
