crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__tests__build_action_queries_modify_column_type@modify_column_type_Sqlite.snap
---
source: crates/vespertide-query/src/sql/mod.rs
expression: sql
---
CREATE TABLE "users_temp" ( "age" bigint )
INSERT INTO "users_temp" ("age") SELECT "age" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
